sonar-server/src/main/webapp/stylesheets/style.css
/* ... */
table.sortable .nosort {
  cursor: default;
}

table.spaced th {
  font-weight: bold;
  color: #333;
  padding: 4px 5px;
}

table.spaced td, table.matrix tfoot td {
  padding: 3px 5px;
  line-height: 18px;
}
table.spaced td img {
  vertical-align: text-bottom;
}

table.spacedicon th {
  font-weight: bold;
  color: #333;
  padding: 4px 5px;
}

table.spacedicon td {
  padding: 0px 5px;
  height: 24px;
}

.thin {
  width: 1%;
}
td.sep {
	width: 10px;
}
.spacer {
  width: 5px;
  display: inline-block;
}
.formError {
  display: inline-block;
  background-color: #FF9090;
  color: #000;
  padding: 0 5px;
}
table.form td {
  padding: 2px 5px;
  vertical-align: top;
}
table.form td.first {
  min-width: 120px;
  text-align: right;
  font-weight: bold;
  vertical-align: middle;
}
table.form td img {
  vertical-align: bottom;
}
.admin hr {
  background: transparent;
  border-left:  none;
  border-right: none;
  border-top:   none;
  border-bottom: 1px dashed #FFD324;
  height: 1px;
}



/* OPERATIONS */
#page-operations {
  display: inline-block;
  width: 100%;
}
div.operations {
  float: right;
  margin: 0;
}
ul.operations {
  float: right;
  list-style-type: none;
  margin: 0;
  background-color: #ECECEC;
  border: 1px solid #cdcdcd;
  border-radius: 3px;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
}
ul.operations li {
  float: left;
  margin: 0;
  padding: 2px 7px;
  font-size: 85%;
  border-right: 1px solid #cdcdcd;
}
ul.operations li.selected {
  background-color: #d4d4d4;
}
ul.operations li.last {
  border-right-width:0;
}
ul.operations li a {
  color: #555;
}
ul.operations li img {
  vertical-align: middle;
  margin-right: 5px;
}

/* RESOURCE VIEWER */
.resourceName h1 {
	margin: 5px 0;
}



/* SOURCE */
.sources2 {
  width: 100%;
  border-top: 1px solid #DDD;
  border-bottom: 1px solid #DDD;
  margin: 0;
}
.sources2 td.lid {
  background-color: #ECECEC;
  border-right: 1px solid #DDDDDD;
  border-left: 1px solid #DDDDDD;
  text-align: right;
  padding: 2px 0.5em 0 0.5em;
  vertical-align: top;
  font-size: 85%;
}
.sources2 td.lid a {
  text-decoration: none;
  color: #AAA;
}
.sources2 td.scm {
  border-right: 1px solid #DDD;
  border-left: 1px solid #DDD;
  background-color: #ECECEC;
}
.sources2 td.revision {
  border-top: 1px solid #DDD;
  vertical-align: top;
  padding: 0 0.3em;
  white-space: nowrap;
}
.sources2 span.date, .sources2 span.date a {
  color: #AAA;
  font-size: 85%;
  text-decoration: none;
}
.sources2 span.author, .sources2 span.author a {
  font-size: 85%;
}
.sources2 div.violation {
  background-color:#FFF;
  margin:0;
  border: 1px solid #DDD;
}
.sources2 div.violation .actions, #global_violations div.violation .actions {
  visibility: hidden;
}
.sources2 div.violation:hover .actions, #global_violations div.violation:hover .actions {
  visibility: visible;
}
.sources2 div.violation .actions form, #global_violations div.violation .actions form {
  display: inline;
  visibility: visible;
}
div.vtitle{
  background-color:#E4ECF3;
  margin:0;
  padding:0 0 0 10px;
  line-height: 2.2em;
  text-shadow: 0 1px 0 #FFF;
  color:#777
}
.falsePositive {
  background-color: #FFF6BF;
  padding-left: 5px;
  padding-right: 5px;
}
.review-reopened {
  background-color: #FDC596;
  padding-left: 5px;
  padding-right: 5px;
}
div.vtitle a.action {
  color: #777;
}
span.rulename, span.rulename a {
  color:#4183C4;
  text-decoration:none;
  font-weight: bold;
}
span.violation_date {
  color:#777;
  font-size:90%;
}
div.review_permalink {
  float: right;
  color: #333333;
  font-size: 12px;
  font-weight: bold;
  margin: 0;
  padding: 0 10px;
  text-shadow: 1px 1px 0 #FFFFFF;
}
span.review_permalink a {
  color:#777;
  font-size:90%;
  padding: 0 0 0 20px;
  background: url('../images/zoom.png') no-repeat left;
}
span.rulename a:hover {
  text-decoration: underline;
}
.sources2 div.violation img {
  vertical-align: sub;
}
.sources2 td.line {
  width: 100%;
  border-right: 1px solid #DDD;
}
.sources2 td.line pre {
  font-size: 12px;
  font-family: monospace;
  margin-left: 1em;
}
.sources2 td.section {
  border-top: 1px solid #DDD;
  border-bottom: 1px solid #DDD;
}
.sources2 td.ind {
  border-right: 1px solid #DDD;
  min-width: 1.5em;
  padding: 0 0.3em;
  text-align: center;
  vertical-align: middle;
}
.sources2 td.ok {
  background-color: #ACE97C;
  border-top: 1px solid #6EC563;
  border-bottom: 1px solid #6EC563;
}
.sources2 td.warn {
  background-color: #FFF6BF;
}
.sources2 td.ko {
  background-color: #FF9090;
}
.sources2 td.new_section {
  border-top: 1px solid #DDD;
  border-bottom: 1px solid #DDD;
  height: 40px;
}
.sources2 td.violations{
  background-color: #FFF;
  padding: 10px;
  border-bottom: 1px solid #DDD;
  border-right: 1px solid #DDD;
  border-top: 1px solid #DDD;
}
#source_title {
  padding: 10px 0;
}
#source_title span.h1 {
  font-size: 16px;
  margin-right: 10px;
}
.source_links {
  font-size: 11px;
}
#global_violations {
  width: 100%;
  margin-bottom: 10px;
}
#global_violations > tbody > tr > td {
  padding-bottom: 10px;
}
#global_violations td {
  padding: 3px 0.5em;
}
#global_violations td img, #source_title img {
  vertical-align: text-bottom;
}
.tab_header {
  border: 1px solid #DDD;
  border-top-width: 0;
  background-color: #ECECEC;
  padding: 5px 10px;
  margin-bottom: 10px;
  color: #444;
}
.tab_header td {
  padding-right: 7px;
}
.tab_header td.name {
  font-weight: bold;
  text-align: left;
  white-space: nowrap;
}
.tab_header td.value {
  text-align: right;
  white-space: nowrap;
}
#source_options {
  margin-top: 5px;
  padding-top: 5px;
  border-top: 1px solid #ddd;
  font-size: 85%;
}
#source_options td {
  background: url("../images/sep12.png") no-repeat scroll 0 50% transparent;
  padding: 0 10px;
}
#source_options td.first {
  background: none;
  padding: 0 10px 0 0;
}



/* REVIEWS */
div#review .actions{
  visibility: hidden;
}
div#review:hover .actions{
  visibility: visible;
}
/* ... */

